test/stack-effects-2.ktn
(1 2 + 3) sayInt
